--- a/index.html
+++ b/index.html
@@ -10,16 +10,26 @@
 <body>
     <main>
         <div class="container">
-            <h1>Check Profit/Loss on your Stock.</h1>
+            <h1 class="title">Check Profit/Loss on your Stock</h1>
             <form class="form">
-                <label for="stock-price">Stock purchase price: <input type="number" id="stock-price" class="input"></label>
-                <label for="stock-quantity">Stock purchase quantity: <input type="number" id="stock-quantity" class="input"></label>
-                <label for="stock-current-price">Stock current price: <input type="number" id="stock-current-price" class="input"></label>
+                <label for="stock-price" class="input-label">Stock purchase price: <input type="number" id="stock-price" class="input"></label>
+                <label for="stock-quantity" class="input-label">Stock purchase quantity: <input type="number" id="stock-quantity" class="input"></label>
+                <label for="stock-current-price" class="input-label">Stock current price: <input type="number" id="stock-current-price" class="input"></label>
             </form>
             <button class="check-btn">Check</button>
             <p class="message-area"></p>
         </div>
     </main>
+
+    <footer>
+        <div class="footer-header">Lets Connect 🌏 to Learn 🚀 and Build.</div>
+        <ul class="list-non-bullet">
+          <li class="list-item-inline"><a href="https://github.com/ChaitanyaCodes" target="_blank" class="link"><img src="./imgs/github.svg" alt="github" class="img"></a></li>
+          <li class="list-item-inline"><a href="https://twitter.com/ChaitanyaCodes" target="_blank" class="link"><img src="./imgs/twitter.svg" alt="twitter" class="img"></a></li>
+          <li class="list-item-inline"><a href="https://www.linkedin.com/in/chaitanya-chanekar/" target="_blank" class="link"><img src="./imgs/linkedin.svg" alt="" class="img"></a></li>
+          <li class="list-item-inline"><a href="https://www.instagram.com/chaitanya.22_/" target="_blank" class="link"><img src="./imgs/instagram.svg" alt="instagram" class="img"></a></li>
+        </ul>
+      </footer>
 
     <script src="./main.js"></script>
 </body>
